# src/routes/accounts/routes.ts
@@ -8,9 +8,9 @@ import { DeleteAccountSchema, deleteAccount } from './handlers/delete-account'
 import { GetAccountInstitutionsSchema, getAccountInstitutions } from './handlers/get-account-institutions'
 import { GetAccountTransactionsSchema, getAccountTransactions } from './handlers/get-account-transactions'
 import {
-  GetAccountTransactionsGroupedSchema,
-  getAccountTransactionsGrouped,
-} from './handlers/get-account-transactions-grouped'
+  GetAccountTransactionsMonthlyOverview,
+  getAccountTransactionsMonthlyOverview,
+} from './handlers/get-account-transactions-monhtly-overview'
 import { getAccounts } from './handlers/get-accounts'
 import { GetAvailableAccountsSchema, getAvailableAccounts } from './handlers/get-available-accounts'
 import { SyncAccountTransactionsSchema, syncAccountTransactions } from './handlers/sync-account-transactions'
@@ -24,10 +24,10 @@ app.get('/', verifyUser, getAccounts)
 app.post('/', verifyUser, validateSchema(CreateAccountSchema), createAccount)
 app.get('/:accountId/transactions', verifyUser, validateSchema(GetAccountTransactionsSchema), getAccountTransactions)
 app.get(
-  '/:accountId/transactions/grouped',
+  '/:accountId/transactions/monthly-overview',
   verifyUser,
-  validateSchema(GetAccountTransactionsGroupedSchema),
-  getAccountTransactionsGrouped
+  validateSchema(GetAccountTransactionsMonthlyOverview),
+  getAccountTransactionsMonthlyOverview
 )
 app.delete('/', verifyUser, validateSchema(DeleteAccountSchema), deleteAccount)
 app.get('/transactions/sync', validateSchema(SyncAccountTransactionsSchema), syncAccountTransactions)
